--- a/week-4/day-5/case-study-rest-api/Pipfile
+++ b/week-4/day-5/case-study-rest-api/Pipfile
@@ -7,8 +7,11 @@ name = "pypi"
 flask = "*"
 flask-restful = "*"
 flask-cors = "*"
+pymysql = "*"
+pyjwt = "*"
 
 [dev-packages]
+coverage = "*"
 
 [requires]
 python_version = "3.9"
